# hole-filling-liepa

./: .gitignore  README.md  bld.bat  build-wheel.sh  environment.yml  meta.yaml  setup-env.bat  setup-env.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package-conda.yml
cpp/: CMakeLists.txt
cpp/include/: hole_fillig_liepa.hpp
cpp/lib/: CMakeLists.txt  hole_fillig_liepa.cpp
cpp/pybind/: CMakeLists.txt  core.cpp
hole_filling_liepa/: hole_filling_liepa.py  native.py  utils.py
module/: MANIFEST.in  environment.yml  meta.yaml  setup.py
module/hole_filling_liepa/: native.py
scripts/: benchmark.py  demo.py
test/: test_basic.py  test_bindings.py  test_io.py
